fix header and footer and align them center

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,19 @@ html, body{
     background-color: black;
     font-weight: bolder;
 }
+.row{
+     margin: 0;
+ }
 /*header*/
+
+#header{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+}
 .main-header{
     overflow: hidden;
     background-color: black;
-    max-width: 1200px;
     margin: auto;
 }
 .logo{
@@ -74,9 +82,7 @@ li.nav{
     width: 100%;
 }
 /*Services Section*/
-.row{
-    margin: 0;
-}
+
 .services-sector{
     background: url('../images/servicesBackground.jpg') no-repeat center center;
     padding-top: -20px;
@@ -202,11 +208,23 @@ li.nav{
     text-align: left;
     margin: 15px;
 }
+#story{
+    position: relative;
+    z-index: 0;
+}
 .footer-content{
-    margin-left: 22%;
-    margin-top: 4%;
-    height: 250px;
+    margin: auto;
+    display: block;
+
 }
 .footer{
     background-color: black;
+
+}
+#footer{
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
